# stock_scraping_agent

./: .env  README.md  main.py  pyproject.toml
steamlit_app/: app.py  readme.md
utils/: news_scraper.py  sentiment_analysis.py  stock_info.py  ticker_lookup.py
