[project]
name = "stock-scraping-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.2.5",
    "fastapi>=0.115.12",
    "playwright>=1.52.0",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
    "yfinance>=0.2.61",
]
